src/snapshots/clart__tui__tests__cancel_rect.snap
---
source: src/tui.rs
expression: buf_string(&buf)
---
┏━━━━━━━━━━━━Clart━━━━━━━━━━━━━┓
┃  +-+                         ┃
┃  | |                         ┃
┃  +-+                         ┃
┃                              ┃
┃                              ┃
┃                              ┃
┗ Move <WASD> Rect <R> Quit <Q>┛
