src/snapshots/clart__tui__tests__render_empty.snap
---
source: src/tui.rs
expression: actual
---
┏━━━━━━━━━━━━━━━━━━━━━Clart━━━━━━━━━━━━━━━━━━━━━━┓
┃                                                ┃
┃                                                ┃
┗━━━━━━━━ Move <WASD> Rect <R> Quit <Q> ━━━━━━━━━┛
